tree-sitter-intens/test/corpus/basic.txt
============
line comment
============

// just a comment

---
(source_file
  (comment))

========================
simple multi-line string
========================

"Lorem ipsum
dolor sit amet"

---
(source_file
  (string))

==============
integer number
==============

123

---
(source_file
  (number))

============
simple float
============

123.456

---
(source_file
  (number))

============================================
float without digits after the decimal point
============================================

0.

---
(source_file
  (number))

===============================
float in exponential notation 1
===============================

1e3

---
(source_file
  (number))

===============================
float in exponential notation 2
===============================

1e-3

---
(source_file
  (number))

===============================
float in exponential notation 3
===============================

60E9

---
(source_file
  (number))

===============================
float in exponential notation 4
===============================

-7.9e-05

---
(source_file
  (number))

===============================
float in exponential notation 5
===============================

1e+009

---
(source_file
  (number))

===========
description
===========

DESCRIPTION "My Description";

---
(source_file
  (description (string)))

=======
include
=======

INCLUDE external_file.inc
INCLUDE ../etc/other.inc

---
(source_file
  (include (file_name))
  (include (file_name)))
