tree-sitter-intens/test/corpus/streamer_block.txt
====================
empty streamer block
====================

STREAMER
END STREAMER;

---
(source_file
  (streamer_block))

========================
simple stream definition
========================

STREAMER
  simple_stream (!foo, foo);
END STREAMER;

---
(source_file
  (streamer_block
    (stream_definition
      (stream_identifier)
      (negation (identifier))
      (identifier))))

=============================
stream definition with option
=============================

STREAMER
  my_stream2 {XML, PROCESS="the_file.txt"}
  (
    foo, bar
  );
END STREAMER;

---
(source_file
  (streamer_block
    (stream_definition
      (stream_identifier)
      (parameter_block
        (parameter)
        (parameter_assignment
          (parameter)
          (string)))
      (identifier)
      (identifier))))
